<resources>
    <string name="app_name">FurnitureApp</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <string name="start_button_text">Start</string>
    <string name="register_btn">Register</string>
    <string name="cancel_btn">Cancel</string>
    <string name="login_btn">Login</string>
    <string name="send_btn">Send</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="desc_reg">Don\'t have an account? Register</string>
    <string name="desc_have_account">Do you have an account? Log in</string>
    <string name="email_hint">email</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="facebook_label">Facebook</string>
    <string name="google_label">Google</string>
    <string name="first_name_hint">first name</string>
    <string name="last_name_hint">last name</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password">We will send you the password reset link to you email</string>
    <string name="reset_link_was_send_to_your_email">Reset link was send to your email</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_cart">Cart</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="search_now">Search Now</string>
    <string name="add_to_cart_btn">Add to cart</string>
    <string name="see_product_btn">See product</string>
    <string name="best_deals_tv">Best deals</string>
    <string name="best_products_tv">Best Products</string>
    <string name="add_product_menu_item">Add product</string>
    <string name="name_hint">Name</string>
    <string name="product_general_information_label">Product general information:</string>
    <string name="category_hint">Category</string>
    <string name="product_description_hint">Product description (optional)</string>
    <string name="price_hint">Price</string>
    <string name="offer_percentage_hint">Offer Percentage (optional)</string>
    <string name="product_details_label">Product details:</string>
    <string name="sizes_optional_hint">Sizes (optional) | use , between each new size</string>
    <string name="colors_btn">Colors</string>
    <string name="images_btn">Images</string>
    <string name="product_color_title_dialog">Product color</string>
    <string name="select_btn_dialog">Select</string>
    <string name="check_your_inputs">Check your inputs</string>
    <string name="save_btn">Save</string>
    <string name="color_product">Color</string>
    <string name="size_product">Size</string>
    <string name="total_price">Total</string>
    <string name="check_out_btn">Check out</string>
    <string name="tv_cart_is_empty">Your shopping cart is empty</string>

    <string-array name="tab_titles">
        <item>Main</item>
        <item>Chair</item>
        <item>Cupboard</item>
        <item>Table</item>
        <item>Accessory</item>
        <item>Furniture</item>
    </string-array>

    <string-array name="categories">
        <item>Special Products</item>
        <item>Best Deals</item>
        <item>Chair</item>
        <item>Cupboard</item>
        <item>Table</item>
        <item>Accessory</item>
        <item>Furniture</item>
    </string-array>

</resources>