<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.AdminActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/products_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_general_information_label"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name_hint" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"/>

            <EditText
                android:id="@+id/ed_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_description_hint" />

            <EditText
                android:id="@+id/ed_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/ed_offer_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/offer_percentage_hint"
                android:inputType="numberDecimal" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/products_info"
            app:layout_constraintStart_toStartOf="@id/products_info"
            app:layout_constraintTop_toBottomOf="@id/products_info">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_details_label"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_sizes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sizes_optional_hint"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_color_picker"
                    style="@style/blueButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colors_btn" />

                <TextView
                    android:id="@+id/tv_selected_colors"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:gravity="center"
                    tools:text="red, blue, green"
                    android:layout_marginStart="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_images_picker"
                    style="@style/blueButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/images_btn" />

                <TextView
                    android:id="@+id/tv_selected_images"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:gravity="center"
                    tools:text="5"
                    android:layout_marginStart="20dp"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save_product"
                android:layout_marginTop="22dp"
                style="@style/blueButtonStyle"
                android:backgroundTint="@color/teal_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_btn" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>