<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/blury_background" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAppName"
                style="@style/h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:drawableStart="@drawable/ic_kleine_shape"
                android:drawablePadding="6dp"
                android:text="@string/app_name"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_lets_login"
                style="@style/h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:gravity="center"
                android:text="@string/rightAddress"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAppName" />

            <TextView
                android:id="@+id/tv_have_account"
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/quality"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/tv_lets_login"
                app:layout_constraintStart_toStartOf="@id/tv_lets_login"
                app:layout_constraintTop_toBottomOf="@id/tv_lets_login" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_register_account_options"
                style="@style/blueButtonStyle"
                android:layout_width="@dimen/mediumButtonWidth"
                android:layout_height="@dimen/smallButtonHeight"
                android:text="@string/register_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_have_account"
                app:layout_constraintStart_toStartOf="@id/tv_have_account"
                app:layout_constraintTop_toBottomOf="@id/tv_have_account" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login_account_options"
                style="@style/whiteButtonStyle"
                android:layout_width="@dimen/mediumButtonWidth"
                android:layout_height="@dimen/smallButtonHeight"
                android:layout_marginTop="10dp"
                android:text="@string/login_btn"
                app:layout_constraintEnd_toEndOf="@id/tv_have_account"
                app:layout_constraintStart_toStartOf="@id/tv_have_account"
                app:layout_constraintTop_toBottomOf="@id/button_register_account_options" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>

