<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_reset_password_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/we_will_send_you_the_password"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_reset_password"
            app:layout_constraintTop_toBottomOf="@id/tv_reset_password" />

        <EditText
            android:id="@+id/ed_reset_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="@id/tv_reset_password_text"
            app:layout_constraintStart_toStartOf="@id/tv_reset_password_text"
            app:layout_constraintTop_toBottomOf="@id/tv_reset_password_text" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ed_reset_password"
            app:layout_constraintStart_toStartOf="@id/ed_reset_password"
            app:layout_constraintTop_toBottomOf="@id/ed_reset_password">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                style="@style/whiteButtonStyle"
                android:text="@string/cancel_btn"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/blueButtonStyle"
                android:text="@string/send_btn"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

