<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_products_img"
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager_product_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/image_close"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_close"
                    app:tint="@color/g_black" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/ll_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_products_img">

                <TextView
                    android:id="@+id/tv_product_name"
                    style="@style/h3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    tools:text="Lofcoding" />

                <TextView
                    android:id="@+id/tv_product_price"
                    style="@style/h3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/g_gray700"
                    tools:text="$120" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_product_description"
                style="@style/h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/g_gray700"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/ll_title"
                tools:text="Description product" />

            <View
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/g_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_description" />

            <LinearLayout
                android:id="@+id/ll_properties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_product_colors"
                        style="@style/h3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/color_product"
                        android:textColor="@color/black" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_colors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_product_sizes"
                        style="@style/h3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size_product"
                        android:textColor="@color/black" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_sizes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </LinearLayout>

            </LinearLayout>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/button_add_to_cart"
                style="@style/blueButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/smallButtonHeight"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/add_to_cart_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:spinning_bar_color="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>

